<resources>
    <string name="app_name">MOV</string>
    <string name="lewati_perkenalan">lewati perkenalan</string>
    <string name="lanjutkan">lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_detail">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_detail">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="memulai">memulai</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_detail">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="daftar_akun">daftar akun baru</string>
    <string name="masuk_akun">masuk akun</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="back">back</string>
    <string name="photo">Photo</string>
    <string name="welcome">Selamat Datang,\nAnonymous</string>
    <string name="upload_nanti">upload nanti</string>
    <string name="simpan_lanjutkan">simpan dan lanjutkan</string>
    <string name="balance">IDR 280.000</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="wallet">wallet</string>
    <string name="title">movie title</string>
    <string name="genre">movie genre</string>
    <string name="storyboard">storyboard</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="see_all">see all</string>
    <string name="whos_played">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="movie_cover">movie cover</string>
    <string name="buy_ticket">beli tiket (%1$d)</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="row1">A</string>
    <string name="row2">B</string>
    <string name="row3">C</string>
    <string name="row4">D</string>
    <string name="row5">E</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="dat">date, time</string>
    <string name="bayar_sekarang">bayar sekarang</string>
    <string name="batalkan">batalkan</string>
    <string name="cinema">Cinema</string>
    <string name="location">location, cinema</string>
    <string name="items">Items</string>
    <string name="seat_number">seat number</string>
    <string name="seat_price">IDR 40.000</string>
    <string name="total_text">Total Harus Dibayar</string>
    <string name="total_price">IDR 80.000</string>
    <string name="ewallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_balance_alert">Saldo pada E-Wallet kamu tidak mencukupi untuk melakukan transaksi</string>
    <string name="simpan_perubahan">simpan perubahan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="n_movies">n Movies</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="ticket">ticket</string>
    <string name="setting">setting</string>
    <string name="checkout_success">checkout success</string>
    <string name="happy_watching">Happy Watching</string>
    <string name="checkout_success_detail">Tiket telah berhasil dibeli dan,\nSelamat Menonton!</string>
    <string name="lihat_tiket">Lihat Tiket</string>

</resources>